Added cycling74 sdk as submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "SwiftOSC"]
 	path = SwiftOSC
 	url = https://github.com/devinroth/SwiftOSC.git
+[submodule "max-sdk"]
+	path = max-sdk
+	url = https://github.com/Cycling74/max-sdk.git
